--- a/app/src/main/res/layout/activity_item_playlists.xml
+++ b/app/src/main/res/layout/activity_item_playlists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".iu.playlists.detail.ItemPlaylistActivity">
+    tools:context=".iu.playlists.detail.ItemPlaylistsActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/containerContent"
