--- a/app/src/main/res/layout/no_internet.xml
+++ b/app/src/main/res/layout/no_internet.xml
@@ -13,7 +13,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/image" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_try_again"
