--- a/app/src/main/res/layout/activity_item_playlists.xml
+++ b/app/src/main/res/layout/activity_item_playlists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".iu.playlists.detail.ItemPlaylistsActivity">
+    tools:context=".ui.playlist.item.ItemPlaylistsActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/containerLayout"
@@ -36,45 +36,54 @@
                     android:orientation="vertical">
 
                     <include
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
                         android:id="@+id/container_toolbar"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_scrollFlags="scroll|snap"
                         layout="@layout/toolbar_app"/>
 
-                    <TextView
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/tyu"
+                        android:layout_marginTop="@dimen/po"
+                        app:cardCornerRadius="@dimen/jk">
 
+                        <ImageView
+                            android:id="@+id/iv_image"
+                            android:layout_width="@dimen/lo"
+                            android:layout_height="@dimen/pi"
+                            android:scaleType="centerCrop"
+                            app:layout_anchor="@+id/main.appbar"
+                            app:layout_anchorGravity="center" />
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
                         android:id="@+id/tvTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/hod"
+                        android:layout_marginStart="@dimen/rf"
                         android:layout_marginTop="@dimen/top"
                         android:layout_marginBottom="@dimen/bot"
                         android:textColor="@color/black"
                         android:textSize="@dimen/ts"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/tvDescription"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:gravity="center_vertical"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/td" />
-
                 </LinearLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="@dimen/wh"
             android:layout_height="@dimen/w"
             android:layout_margin="@dimen/card"
             app:cornerRadius="@dimen/p"
+            android:src="@drawable/play_button"
+            app:maxImageSize="@dimen/wh"
             android:contentDescription="@string/fab_button"
-            android:background="@drawable/play_button"
             app:layout_anchor="@id/main.appbar"
             app:layout_anchorGravity="bottom|right|end" />
 
